New mapping approach - Refreshes license information in file headers - Rewrites API models to eliminate most of the custom mapping code - Redefines API configuration options - Simplifies fetching and mapping logic - Updates dependency versions - Reduces Java source level to 8 everywhere to eliminate JavaDoc warnings related to generated code - Moves some in-line JSONs to class path resources to make tests more clean - Adds assumptions to skip integration tests if API key is not set - Adds assumptions to skip One Call API tests unless RUN_ONE_CALL env var is set - Solves issue around UnsupportedOperationExceptions in certain terminators - Adds option to use secure channel for picture URLs - Adds new tests
Signed-off-by: Esta Nagy <nagyesta@gmail.com>